--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.7.9",
     "next": "15.1.3",
+    "next-auth": "^5.0.0-beta.25",
     "openai": "^4.77.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
