--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next-auth": "^5.0.0-beta.25",
     "openai": "^4.77.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
